# MarketAnalysis

./: README.md
data/: region_market_mapping.csv
figures/: pyproject.toml
notebooks/: FP1.ipynb  FP2.ipynb  SQL.sql  SQLAnalysis.sql  SQLDB.sql  SQLTables.sql
notebooks/.ipynb_checkpoints/: FP1-checkpoint.ipynb
